--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nigel Pain Photography</title>
+    <title>Nigel Pain Photography - Home</title>
     <link href="css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
+    <a href="gallery/index.html">Gallery</a>
     <p>This is my much improved site v0.0.0.2</p>
   </body>
 </html>
