added new aboutme page and basic heading and navbar to homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <link href="css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <a href="gallery/index.html">Gallery</a>
+    <h1>Nigel Pain Photography</h1>
+    <table>
+      <tr>
+        <td class="navbutton"><a href="index.html">Home</a></td>
+        <td class="navbutton"><a href="gallery/index.html">Gallery</a></td>
+        <td class="navbutton"><a href="aboutme.html">About Me</a></td>
+      </tr>
+    </table>
     <p>This is my much improved site v0.0.0.2</p>
   </body>
 </html>
