--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,6 +5,6 @@
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <img src="../images/littlenipper_website.jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
+    <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
   </body>
 </html>
