--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nigel Pain Photography - Gallery</title>
+    <title>Nigel Pain Photography - Gallery Index</title>
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
+    <a href="wildlife.html">Wildlife</a>
+    <a href="stilllife.html">Still Life</a>
   </body>
 </html>
