added page content div styling and div for future logo

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,7 +5,12 @@
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <a href="wildlife.html">Wildlife</a>
-    <a href="stilllife.html">Still Life</a>
+    <div id="page">
+      <div id="logo">
+        <h1>Nigel Pain Photography</h1>
+      </div>
+      <a href="wildlife.html">Wildlife</a>
+      <a href="stilllife.html">Still Life</a>
+    </div>
   </body>
 </html>
