--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,11 @@
     <link href="css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <p>My name is Nigel and I like photography</p>
+    <div id="page">
+      <div id="logo">
+        <h1>Nigel Pain Photography</h1>
+      </div>
+      <p>My name is Nigel and I like photography</p>
+    </div>
   </body>
 </html>
