--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -5,6 +5,11 @@
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+    <div id="page">
+      <div id="logo">
+        <h1>Nigel Pain Photography</h1>
+      </div>
+      <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+    </div>
   </body>
 </html>
