--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -5,6 +5,11 @@
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
+    <div id="page">
+      <div id="logo">
+        <h1>Nigel Pain Photography</h1>
+      </div>
+      <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
+    </div>
   </body>
 </html>
