--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <link href="css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <h1>Nigel Pain Photography</h1>
-    <table>
-      <tr>
-        <td class="navbutton"><a href="index.html">Home</a></td>
-        <td class="navbutton"><a href="gallery/index.html">Gallery</a></td>
-        <td class="navbutton"><a href="aboutme.html">About Me</a></td>
-      </tr>
-    </table>
-    <p>This is my much improved site v0.0.0.2</p>
+    <div id="page">
+      <div id="logo">
+        <h1>Nigel Pain Photography</h1>
+      </div>
+      <table>
+        <tr>
+          <td class="navbutton"><a href="index.html">Home</a></td>
+          <td class="navbutton"><a href="gallery/index.html">Gallery</a></td>
+          <td class="navbutton"><a href="aboutme.html">About Me</a></td>
+        </tr>
+      </table>
+      <p>Welcome to Nigel Pain Photography!</p>
+      <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
+    </div>
   </body>
 </html>
