added very basic navigation bar onto the site

--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -9,6 +9,11 @@
       <div id="logo">
         <h1>Nigel Pain Photography</h1>
       </div>
+      <ul id="navbar">
+        <li class="navbutton"><a href="../index.html">Home</a></li>
+        <li class="navbutton"><a href="index.html">Gallery</a></li>
+        <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
+      </ul>
       <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
     </div>
   </body>
