--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,11 @@
       <div id="logo">
         <h1>Nigel Pain Photography</h1>
       </div>
+      <ul id="navbar">
+        <li class="navbutton"><a href="index.html">Home</a></li>
+        <li class="navbutton"><a href="gallery/index.html">Gallery</a></li>
+        <li class="navbutton"><a href="aboutme.html">About Me</a></li>
+      </ul>
       <p>My name is Nigel and I like photography</p>
     </div>
   </body>
