--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,6 +9,11 @@
       <div id="logo">
         <h1>Nigel Pain Photography</h1>
       </div>
+      <ul id="navbar">
+        <li class="navbutton"><a href="../index.html">Home</a></li>
+        <li class="navbutton"><a href="index.html">Gallery</a></li>
+        <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
+      </ul>
       <a href="wildlife.html">Wildlife</a>
       <a href="stilllife.html">Still Life</a>
     </div>
