--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
       <div id="logo">
         <h1>Nigel Pain Photography</h1>
       </div>
-      <table>
-        <tr>
-          <td class="navbutton"><a href="index.html">Home</a></td>
-          <td class="navbutton"><a href="gallery/index.html">Gallery</a></td>
-          <td class="navbutton"><a href="aboutme.html">About Me</a></td>
-        </tr>
-      </table>
+      <ul id="navbar">
+        <li class="navbutton"><a href="index.html">Home</a></li>
+        <li class="navbutton"><a href="gallery/index.html">Gallery</a></li>
+        <li class="navbutton"><a href="aboutme.html">About Me</a></li>
+      </ul>
       <p>Welcome to Nigel Pain Photography!</p>
       <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
     </div>
