added new photo and caption and fixed some layout issues

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,15 +6,17 @@
   </head>
   <body>
     <div id="page">
-      <div id="logo">
-        <h1>Nigel Pain Photography</h1>
+      <div id="pagecontent">
+        <div id="logo">
+          <h1>Nigel Pain Photography</h1>
+        </div>
+        <ul id="navbar">
+          <li class="navbutton"><a href="index.html">Home</a></li>
+          <li class="navbutton"><a href="gallery/index.html">Gallery</a></li>
+          <li class="navbutton"><a href="aboutme.html">About Me</a></li>
+        </ul>
+        <p>My name is Nigel and I like photography</p>
       </div>
-      <ul id="navbar">
-        <li class="navbutton"><a href="index.html">Home</a></li>
-        <li class="navbutton"><a href="gallery/index.html">Gallery</a></li>
-        <li class="navbutton"><a href="aboutme.html">About Me</a></li>
-      </ul>
-      <p>My name is Nigel and I like photography</p>
     </div>
   </body>
 </html>
