--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -6,15 +6,19 @@
   </head>
   <body>
     <div id="page">
-      <div id="logo">
-        <h1>Nigel Pain Photography</h1>
-      </div>
-      <ul id="navbar">
-        <li class="navbutton"><a href="../index.html">Home</a></li>
-        <li class="navbutton"><a href="index.html">Gallery</a></li>
-        <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
-      </ul>
-      <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+      <div id="pagecontent">
+        <div id="logo">
+          <h1>Nigel Pain Photography</h1>
+        </div>
+        <ul id="navbar">
+          <li class="navbutton"><a href="../index.html">Home</a></li>
+          <li class="navbutton"><a href="index.html">Gallery</a></li>
+          <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
+        </ul>
+        <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+        <img src="../images/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
+        <p class="photocaption">This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?</p>
+    </div>
     </div>
   </body>
 </html>
