--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -6,15 +6,17 @@
   </head>
   <body>
     <div id="page">
-      <div id="logo">
-        <h1>Nigel Pain Photography</h1>
+      <div id="pagecontent">
+        <div id="logo">
+          <h1>Nigel Pain Photography</h1>
+        </div>
+        <ul id="navbar">
+          <li class="navbutton"><a href="../index.html">Home</a></li>
+          <li class="navbutton"><a href="index.html">Gallery</a></li>
+          <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
+        </ul>
+        <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
       </div>
-      <ul id="navbar">
-        <li class="navbutton"><a href="../index.html">Home</a></li>
-        <li class="navbutton"><a href="index.html">Gallery</a></li>
-        <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
-      </ul>
-      <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
     </div>
   </body>
 </html>
