--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   </head>
   <body>
     <div id="page">
-      <div id="logo">
-        <h1>Nigel Pain Photography</h1>
+      <div id="pagecontent">
+        <div id="logo">
+          <h1>Nigel Pain Photography</h1>
+        </div>
+        <ul id="navbar">
+          <li class="navbutton"><a href="index.html">Home</a></li>
+          <li class="navbutton"><a href="gallery/index.html">Gallery</a></li>
+          <li class="navbutton"><a href="aboutme.html">About Me</a></li>
+        </ul>
+        <p>Welcome to Nigel Pain Photography!</p>
+        <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
       </div>
-      <ul id="navbar">
-        <li class="navbutton"><a href="index.html">Home</a></li>
-        <li class="navbutton"><a href="gallery/index.html">Gallery</a></li>
-        <li class="navbutton"><a href="aboutme.html">About Me</a></li>
-      </ul>
-      <p>Welcome to Nigel Pain Photography!</p>
-      <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
     </div>
   </body>
 </html>
