--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,16 +6,18 @@
   </head>
   <body>
     <div id="page">
-      <div id="logo">
-        <h1>Nigel Pain Photography</h1>
+      <div id="pagecontent">
+        <div id="logo">
+          <h1>Nigel Pain Photography</h1>
+        </div>
+        <ul id="navbar">
+          <li class="navbutton"><a href="../index.html">Home</a></li>
+          <li class="navbutton"><a href="index.html">Gallery</a></li>
+          <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
+        </ul>
+        <a href="wildlife.html">Wildlife</a>
+        <a href="stilllife.html">Still Life</a>
       </div>
-      <ul id="navbar">
-        <li class="navbutton"><a href="../index.html">Home</a></li>
-        <li class="navbutton"><a href="index.html">Gallery</a></li>
-        <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
-      </ul>
-      <a href="wildlife.html">Wildlife</a>
-      <a href="stilllife.html">Still Life</a>
     </div>
   </body>
 </html>
