again testing auto build and deploy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
         <p>Welcome to Nigel Pain Photography!</p>
         <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
-        <p>Testing auto build and deploy...</p>
+        <p>Testing auto build and deploy...and again</p>
       </div>
     </div>
   </body>
