added caption to one of the photos in stilllife

--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -16,7 +16,7 @@
           <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
         </ul>
         <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
-        <p class="photocaption">Another build and deploy test.</p>
+        <p class="photocaption">With this photograph I wanted to try and capture that feeling when the first apples of the season are lay on the ground, a sign that of the tasty things to come!</p>
         <img src="../images/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
         <p class="photocaption">This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?</p>
     </div>
