added basic layout for gallery page

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -15,9 +15,18 @@
           <li class="navbutton"><a href="index.html">Gallery</a></li>
           <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
         </ul>
-        <a href="wildlife.html">Wildlife</a>
-        <a href="stilllife.html">Still Life</a>
-      </div>
-    </div>
+        <div id="galleries">
+          <div class="gallerylinks">
+            <a href="wildlife.html">Wildlife</a>
+          </div><!-- gallerylinks -->
+          <div class="gallerylinks">
+            <a href="stilllife.html">Still Life</a>
+          </div><!-- gallerylinks -->
+          <div class="gallerylinks">
+            <a href="landscapes.html">Landscapes</a>
+          </div><!-- gallerylinks -->
+        </div><!-- galleries -->
+      </div><!-- pagecontent -->
+    </div><!-- page -->
   </body>
 </html>
