--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -16,6 +16,9 @@
           <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
         </ul>
         <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
+        <p class="photocaption">I owe the very existence of this image to our guide on the lovely Ria Lagartos in Mexico, how he managed to spot this little fella bathing on a washed up branch from the middle of the river I will never know =)</p>
+        <img src="../images/Lookout (website).jpg" alt="An image of a blackhawk perched on a dead tree branch" title="Lookout" />
+        <p class="photocaption">You didn't really have to work hard to capture amazing wildlife on the Ria Lagartos, this blackhawk was just perched atop a branch on the lookout for it's next meal as we sailed past.</p>
       </div>
     </div>
   </body>
