added css layout template and applied to all pages, also some tidy up

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,18 +5,20 @@
     <link href="css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <div id="page">
-      <div id="pagecontent">
-        <div id="logo">
-          <h1>Nigel Pain Photography</h1>
-        </div>
-        <ul id="navbar">
+    <div id="page" class="container_12 clearfix">
+      <div id="logo" class="grid_12">
+        <h1>Nigel Pain Photography</h1>
+      </div><!-- logo -->
+      <div id="navbar" class="grid_12">
+        <ul>
           <li class="navbutton"><a href="index.html">Home</a></li>
           <li class="navbutton"><a href="gallery/index.html">Gallery</a></li>
           <li class="navbutton"><a href="aboutme.html">About Me</a></li>
         </ul>
+      </div><!-- navbar -->
+      <div id="aboutme" class="grid_12">
         <p>My name is Nigel and I like photography</p>
-      </div>
-    </div>
+      </div><!-- aboutme -->
+    </div><!-- page -->
   </body>
 </html>
