--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,28 +5,28 @@
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <div id="page">
-      <div id="pagecontent">
-        <div id="logo">
-          <h1>Nigel Pain Photography</h1>
-        </div>
-        <ul id="navbar">
+    <div id="page" class="container_12 clearfix">
+      <div id="logo" class="grid_12">
+        <h1>Nigel Pain Photography</h1>
+      </div><!-- logo -->
+      <div id="navbar" class="grid_12">
+        <ul>
           <li class="navbutton"><a href="../index.html">Home</a></li>
           <li class="navbutton"><a href="index.html">Gallery</a></li>
           <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
         </ul>
-        <div id="galleries">
-          <div class="gallerylinks">
-            <a href="wildlife.html">Wildlife</a>
-          </div><!-- gallerylinks -->
-          <div class="gallerylinks">
-            <a href="stilllife.html">Still Life</a>
-          </div><!-- gallerylinks -->
-          <div class="gallerylinks">
-            <a href="landscapes.html">Landscapes</a>
-          </div><!-- gallerylinks -->
-        </div><!-- galleries -->
-      </div><!-- pagecontent -->
+      </div><!-- navbar -->
+      <div id="galleries" class="container_12">
+        <div class="gallerylinks grid_4">
+          <a href="wildlife.html">Wildlife</a>
+        </div><!-- gallerylinks -->
+        <div class="gallerylinks grid_4">
+          <a href="stilllife.html">Still Life</a>
+        </div><!-- gallerylinks -->
+        <div class="gallerylinks grid_4">
+          <a href="landscapes.html">Landscapes</a>
+        </div><!-- gallerylinks -->
+      </div><!-- galleries -->
     </div><!-- page -->
   </body>
 </html>
