--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <link href="css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <div id="page">
-      <div id="pagecontent">
-        <div id="logo">
-          <h1>Nigel Pain Photography</h1>
-        </div>
-        <ul id="navbar">
+    <div id="page" class="container_12 clearfix">
+      <div id="logo" class="grid_12">
+        <h1>Nigel Pain Photography</h1>
+      </div><!-- logo -->
+      <div id="navbar" class="grid_12">
+        <ul>
           <li class="navbutton"><a href="index.html">Home</a></li>
           <li class="navbutton"><a href="gallery/index.html">Gallery</a></li>
           <li class="navbutton"><a href="aboutme.html">About Me</a></li>
         </ul>
+      </div><!-- navbar -->
+      <div id="siteintro" class="grid_12">
         <p>Welcome to Nigel Pain Photography!</p>
         <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
-      </div>
-    </div>
+      </div><!-- siteintro -->
+      <div id="blog" class="grid_9">
+        <p>This is where the blog goes</p>
+      </div><!-- blog -->
+    </div><!-- page -->
   </body>
 </html>
