--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -5,21 +5,21 @@
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
-    <div id="page">
-      <div id="pagecontent">
-        <div id="logo">
-          <h1>Nigel Pain Photography</h1>
-        </div>
-        <ul id="navbar">
+    <div id="page" class="container_12 clearfix">
+      <div id="logo" class="grid_12">
+        <h1>Nigel Pain Photography</h1>
+      </div><!-- logo -->
+      <div id="navbar" class="grid_12">
+        <ul>
           <li class="navbutton"><a href="../index.html">Home</a></li>
           <li class="navbutton"><a href="index.html">Gallery</a></li>
           <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
         </ul>
-        <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
-        <p class="photocaption">With this photograph I wanted to try and capture that feeling when the first apples of the season have fallen, a sign of the tasty things to come!</p>
-        <img src="../images/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
-        <p class="photocaption">This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?</p>
-    </div>
-    </div>
+      </div><!-- navbar -->
+      <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+      <p class="photocaption grid_12">With this photograph I wanted to try and capture that feeling when the first apples of the season have fallen, a sign of the tasty things to come!</p>
+      <img src="../images/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
+      <p class="photocaption grid_12">This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?</p>
+    </div><!-- page -->
   </body>
 </html>
