--- a/index.html
+++ b/index.html
@@ -3,15 +3,6 @@
   <head>
     <title>Nigel Pain Photography - Home</title>
     <link href="css/styles.css", type="text/css", rel="stylesheet">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-62898077-1', 'auto');
-      ga('send', 'pageview');
-    </script>
   </head>
   <body>
     <div id="page" class="container_12 clearfix">
@@ -33,5 +24,15 @@
         <p>This is where the blog goes</p>
       </div><!-- blog -->
     </div><!-- page -->
+    <!-- google analytics code -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62898077-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
