--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,17 @@
       <div id="aboutme" class="grid_12">
         <p>My name is Nigel and I like photography</p>
       </div><!-- aboutme -->
-    </div><!-- page -->
+    </div><!-- page -->    
+    <!-- google analytics code -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62904127-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
