--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -21,5 +21,16 @@
       <img src="../images/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
       <p class="photocaption grid_12">This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?</p>
     </div><!-- page -->
+    <!-- google analytics code -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62904127-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
