--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -21,5 +21,16 @@
       <img src="../images/Lookout (website).jpg" alt="An image of a blackhawk perched on a dead tree branch" title="Lookout" />
       <p class="photocaption grid_12">You didn't really have to work hard to capture amazing wildlife on the Ria Lagartos, this blackhawk was just perched atop a branch on the lookout for it's next meal as we sailed past.</p>
     </div><!-- page -->
+    <!-- google analytics code -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62904127-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
