added top navbar to each page will need background later

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,17 +5,19 @@
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="../index.html" class="navbtn">Home</a></li>
+        <li><a href="gallery/index.html" class="navbtncur">Gallery</a></li>
+        <li><a href="#" class="navbtn">Blog</a></li>
+        <li><a href="../about.html" class="navbtn">About</a></li>
+        <li><a href="#" class="navbtn">Contact</a></li>
+      </ul>
+    </nav>
     <div id="page" class="container_12 clearfix">
       <div id="logo" class="grid_12">
         <h1>Nigel Pain Photography</h1>
       </div><!-- logo -->
-      <div id="navbar" class="grid_12">
-        <ul>
-          <li class="navbutton"><a href="../index.html">Home</a></li>
-          <li class="navbutton"><a href="index.html">Gallery</a></li>
-          <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
-        </ul>
-      </div><!-- navbar -->
       <div id="galleries" class="container_12">
         <div class="gallerylinks grid_4">
           <a href="wildlife.html">Wildlife</a>
