--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -5,17 +5,19 @@
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="../index.html" class="navbtn">Home</a></li>
+        <li><a href="index.html" class="navbtncur">Gallery</a></li>
+        <li><a href="#" class="navbtn">Blog</a></li>
+        <li><a href="../about.html" class="navbtn">About</a></li>
+        <li><a href="#" class="navbtn">Contact</a></li>
+      </ul>
+    </nav>
     <div id="page" class="container_12 clearfix">
       <div id="logo" class="grid_12">
         <h1>Nigel Pain Photography</h1>
       </div><!-- logo -->
-      <div id="navbar" class="grid_12">
-        <ul>
-          <li class="navbutton"><a href="../index.html">Home</a></li>
-          <li class="navbutton"><a href="index.html">Gallery</a></li>
-          <li class="navbutton"><a href="../aboutme.html">About Me</a></li>
-        </ul>
-      </div><!-- navbar -->
       <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
       <p class="photocaption grid_12">I owe the very existence of this image to our guide on the lovely Ria Lagartos in Mexico, how he managed to spot this little fella bathing on a washed up branch from the middle of the river I will never know =)</p>
       <img src="../images/Lookout (website).jpg" alt="An image of a blackhawk perched on a dead tree branch" title="Lookout" />
