--- a/about.html
+++ b/about.html
@@ -5,21 +5,23 @@
     <link href="css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="navbtn">Home</a></li>
+        <li><a href="gallery/index.html" class="navbtn">Gallery</a></li>
+        <li><a href="#" class="navbtn">Blog</a></li>
+        <li><a href="about.html" class="navbtncur">About</a></li>
+        <li><a href="#" class="navbtn">Contact</a></li>
+      </ul>
+    </nav>
     <div id="page" class="container_12 clearfix">
       <div id="logo" class="grid_12">
         <h1>Nigel Pain Photography</h1>
       </div><!-- logo -->
-      <div id="navbar" class="grid_12">
-        <ul>
-          <li class="navbutton"><a href="index.html">Home</a></li>
-          <li class="navbutton"><a href="gallery/index.html">Gallery</a></li>
-          <li class="navbutton"><a href="aboutme.html">About Me</a></li>
-        </ul>
-      </div><!-- navbar -->
       <div id="aboutme" class="grid_12">
         <p>My name is Nigel and I like photography</p>
       </div><!-- aboutme -->
-    </div><!-- page -->    
+    </div><!-- page -->
     <!-- google analytics code -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
