--- a/gallery/index.html
+++ b/gallery/index.html
@@ -15,9 +15,9 @@
       </ul>
     </nav>
     <div id="page" class="container_12 clearfix">
-      <div id="logo" class="grid_12">
+      <header class="grid_12">
         <h1>Nigel Pain Photography</h1>
-      </div><!-- logo -->
+      </header>
       <div id="galleries" class="container_12">
         <div class="gallerylinks grid_4">
           <a href="wildlife.html">Wildlife</a>
