--- a/gallery/landscapes.html
+++ b/gallery/landscapes.html
@@ -16,9 +16,9 @@
         </ul>
       </nav>
       <div id="page" class="container_12 clearfix">
-        <div id="logo" class="grid_12">
+        <header class="grid_12">
           <h1>Nigel Pain Photography</h1>
-        </div><!-- logo -->
+        </header>
       </div><!-- page -->
       <!-- google analytics code -->
       <script>
