--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -15,9 +15,9 @@
       </ul>
     </nav>
     <div id="page" class="container_12 clearfix">
-      <div id="logo" class="grid_12">
+      <header class="grid_12">
         <h1>Nigel Pain Photography</h1>
-      </div><!-- logo -->
+      </header>
       <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
       <p class="photocaption grid_12">With this photograph I wanted to try and capture that feeling when the first apples of the season have fallen, a sign of the tasty things to come!</p>
       <img src="../images/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
