--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -15,9 +15,9 @@
       </ul>
     </nav>
     <div id="page" class="container_12 clearfix">
-      <div id="logo" class="grid_12">
+      <header class="grid_12">
         <h1>Nigel Pain Photography</h1>
-      </div><!-- logo -->
+      </header>
       <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
       <p class="photocaption grid_12">I owe the very existence of this image to our guide on the lovely Ria Lagartos in Mexico, how he managed to spot this little fella bathing on a washed up branch from the middle of the river I will never know =)</p>
       <img src="../images/Lookout (website).jpg" alt="An image of a blackhawk perched on a dead tree branch" title="Lookout" />
