--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       </ul>
     </nav>
     <div id="page" class="container_12 clearfix">
-      <div id="logo" class="grid_12">
+      <header class="grid_12">
         <h1>Nigel Pain Photography</h1>
-      </div><!-- logo -->
+      </header>
       <div id="siteintro" class="grid_12">
         <p>Welcome to Nigel Pain Photography!</p>
         <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
