added skeleton contact page to site

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nigel Pain Photography - About</title>
+    <title>Nigel Pain Photography - Contact</title>
     <link href="css/styles.css", type="text/css", rel="stylesheet">
   </head>
   <body>
@@ -10,17 +10,14 @@
         <li><a href="index.html" class="navbtn">Home</a></li>
         <li><a href="gallery/index.html" class="navbtn">Gallery</a></li>
         <li><a href="#" class="navbtn">Blog</a></li>
-        <li><a href="about.html" class="navbtncur">About</a></li>
-        <li><a href="contact.html" class="navbtn">Contact</a></li>
+        <li><a href="about.html" class="navbtn">About</a></li>
+        <li><a href="contact.html" class="navbtncur">Contact</a></li>
       </ul>
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
         <h1>Nigel Pain Photography</h1>
       </header>
-      <div id="aboutme" class="grid_12">
-        <p>My name is Nigel and I like photography</p>
-      </div><!-- aboutme -->
     </div><!-- page -->
     <!-- google analytics code -->
     <script>
