--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -11,7 +11,7 @@
         <li><a href="index.html" class="navbtncur">Gallery</a></li>
         <li><a href="#" class="navbtn">Blog</a></li>
         <li><a href="../about.html" class="navbtn">About</a></li>
-        <li><a href="#" class="navbtn">Contact</a></li>
+        <li><a href="../contact.html" class="navbtn">Contact</a></li>
       </ul>
     </nav>
     <div id="page" class="container_12 clearfix">
