--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,17 @@
       <header class="grid_12">
         <h1>Nigel Pain Photography</h1>
       </header>
+      <div id="page-header" class="grid_4">
+        <h1>Get in Touch</h1>
+      </div><!-- page-header -->
+      <div id="contact-intro" class="grid_7">
+        <p>You can use any of the methods on this page to contact me. I like to think that I am a friendly and approachable kinda chap, so just get in touch if you have questions about services I offer.</p>
+      </div><!-- contact-intro -->
+      <div id="contact-telephone" class="grid_4">
+        <h2 class="section-header">Audiophone</h2>
+        <p>If you prefer the sound of a human voice then feel free to call me on:</p>
+        <p><b>07527 983268</b></p>
+      </div><!-- contact-telephone -->
     </div><!-- page -->
     <!-- google analytics code -->
     <script>
