added basic version of header and tweaked layout and file structure

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,7 +16,9 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <h1>Nigel Pain Photography</h1>
+        <div id="logo">
+          <h1>Nigel Pain Photography</h1>
+        </div><!-- logo -->
       </header>
       <div id="galleries" class="container_12">
         <div class="gallerylinks grid_4">
