--- a/gallery/landscapes.html
+++ b/gallery/landscapes.html
@@ -17,7 +17,9 @@
       </nav>
       <div id="page" class="container_12 clearfix">
         <header class="grid_12">
-          <h1>Nigel Pain Photography</h1>
+          <div id="logo">
+            <h1>Nigel Pain Photography</h1>
+          </div><!-- logo -->
         </header>
       </div><!-- page -->
       <!-- google analytics code -->
