--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -16,11 +16,13 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <h1>Nigel Pain Photography</h1>
+        <div id="logo">
+          <h1>Nigel Pain Photography</h1>
+        </div><!-- logo -->
       </header>
-      <img src="../images/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+      <img src="../images/gallery/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
       <p class="photocaption grid_12">With this photograph I wanted to try and capture that feeling when the first apples of the season have fallen, a sign of the tasty things to come!</p>
-      <img src="../images/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
+      <img src="../images/gallery/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
       <p class="photocaption grid_12">This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?</p>
     </div><!-- page -->
     <!-- google analytics code -->
