--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -16,11 +16,13 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <h1>Nigel Pain Photography</h1>
+        <div id="logo">
+          <h1>Nigel Pain Photography</h1>
+        </div><!-- logo -->
       </header>
-      <img src="../images/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
+      <img src="../images/gallery/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
       <p class="photocaption grid_12">I owe the very existence of this image to our guide on the lovely Ria Lagartos in Mexico, how he managed to spot this little fella bathing on a washed up branch from the middle of the river I will never know =)</p>
-      <img src="../images/Lookout (website).jpg" alt="An image of a blackhawk perched on a dead tree branch" title="Lookout" />
+      <img src="../images/gallery/Lookout (website).jpg" alt="An image of a blackhawk perched on a dead tree branch" title="Lookout" />
       <p class="photocaption grid_12">You didn't really have to work hard to capture amazing wildlife on the Ria Lagartos, this blackhawk was just perched atop a branch on the lookout for it's next meal as we sailed past.</p>
     </div><!-- page -->
     <!-- google analytics code -->
