--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <h1>Nigel Pain Photography</h1>
+        <div id="logo">
+          <h1>Nigel Pain Photography</h1>
+        </div><!-- logo -->
       </header>
+      <div id="page-header" class="grid_6">
+        <h1>Welcome Traveller</h1>
+      </div><!-- page-header -->
       <div id="siteintro" class="grid_12">
-        <p>Welcome to Nigel Pain Photography!</p>
         <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
       </div><!-- siteintro -->
       <div id="blog" class="grid_9">
