--- a/index.html
+++ b/index.html
@@ -14,22 +14,34 @@
         <li><a href="contact.html" class="navbtn">Contact</a></li>
       </ul>
     </nav>
+    
     <div id="page" class="container_12 clearfix">
+
       <header class="grid_12">
         <div id="logo">
           <h1>Nigel Pain Photography</h1>
         </div><!-- logo -->
       </header>
+
       <div id="page-header" class="grid_6">
         <h1>Welcome Traveller</h1>
       </div><!-- page-header -->
+
       <div id="siteintro" class="grid_12">
         <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
       </div><!-- siteintro -->
+
       <div id="blog" class="grid_9">
         <p>This is where the blog goes</p>
       </div><!-- blog -->
+
+      <div>
+        <img id="recentPhotos" src="images/recent photos/First to Fall (website).jpg" alt="Recently Added Photos" />
+        <script src="js/recent_photos.js"></script>
+      </div>
+
     </div><!-- page -->
+
     <!-- google analytics code -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
