created website logo and added to all pages

--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,7 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <div id="logo">
-          <h1>Nigel Pain Photography</h1>
-        </div><!-- logo -->
+        <img src="./images/Header Logo.png" alt="Website Logo">
       </header>
       <div id="page-header" class="grid_4">
         <h1>Get in Touch</h1>
