--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -16,9 +16,7 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <div id="logo">
-          <h1>Nigel Pain Photography</h1>
-        </div><!-- logo -->
+        <img src="../images/Header Logo.png" alt="Website Logo">
       </header>
       <img src="../images/gallery/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
       <p class="photocaption grid_12">With this photograph I wanted to try and capture that feeling when the first apples of the season have fallen, a sign of the tasty things to come!</p>
