--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -16,9 +16,7 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <div id="logo">
-          <h1>Nigel Pain Photography</h1>
-        </div><!-- logo -->
+        <img src="../images/Header Logo.png" alt="Website Logo">
       </header>
       <img src="../images/gallery/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
       <p class="photocaption grid_12">I owe the very existence of this image to our guide on the lovely Ria Lagartos in Mexico, how he managed to spot this little fella bathing on a washed up branch from the middle of the river I will never know =)</p>
