--- a/about.html
+++ b/about.html
@@ -16,9 +16,7 @@
     </nav>
     <div id="page" class="container_12 clearfix">
       <header class="grid_12">
-        <div id="logo">
-          <h1>Nigel Pain Photography</h1>
-        </div><!-- logo -->
+        <img src="./images/Header Logo.png" alt="Website Logo">
       </header>
       <div id="aboutme" class="grid_12">
         <p>My name is Nigel and I like photography</p>
