--- a/gallery/landscapes.html
+++ b/gallery/landscapes.html
@@ -17,9 +17,7 @@
       </nav>
       <div id="page" class="container_12 clearfix">
         <header class="grid_12">
-          <div id="logo">
-            <h1>Nigel Pain Photography</h1>
-          </div><!-- logo -->
+          <img src="../images/Header Logo.png" alt="Website Logo">
         </header>
       </div><!-- page -->
       <!-- google analytics code -->
