--- a/index.html
+++ b/index.html
@@ -18,17 +18,15 @@
     <div id="page" class="container_12 clearfix">
 
       <header class="grid_12">
-        <div id="logo">
-          <h1>Nigel Pain Photography</h1>
-        </div><!-- logo -->
+        <img src="./images/Header Logo.png" alt="Website Logo">
       </header>
 
       <div id="page-header" class="grid_6">
         <h1>Welcome Traveller</h1>
       </div><!-- page-header -->
 
-      <div id="siteintro" class="grid_12">
-        <p>As you can see the site is still very much in the early stages of construction, though I hope you enjoy what little content is here and come back to see how it grows into the future =)</p>
+      <div id="siteintro" class="grid_8">
+        <p>Welcome web wanderer to nigelpainphotography.com the digital home for all of my observations and musings on the world and it's beauty.</p>
       </div><!-- siteintro -->
 
       <div id="blog" class="grid_9">
