changed header background and amend some css names to follow convention

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <header class="grid_12">
         <img src="./images/Header Logo.png" alt="Website Logo">
       </header>
-      <div id="page-header" class="grid_4">
+      <div id="pageHeader" class="grid_4">
         <h1>Get in Touch</h1>
       </div><!-- page-header -->
       <div id="contact-intro" class="grid_7">
