--- a/index.html
+++ b/index.html
@@ -21,17 +21,13 @@
         <img src="./images/Header Logo.png" alt="Website Logo">
       </header>
 
-      <div id="page-header" class="grid_6">
+      <div id="pageHeader" class="grid_6">
         <h1>Welcome Traveller</h1>
       </div><!-- page-header -->
 
-      <div id="siteintro" class="grid_8">
+      <div id="siteIntro" class="grid_8">
         <p>Welcome web wanderer to nigelpainphotography.com the digital home for all of my observations and musings on the world and it's beauty.</p>
       </div><!-- siteintro -->
-
-      <div id="blog" class="grid_9">
-        <p>This is where the blog goes</p>
-      </div><!-- blog -->
 
       <div>
         <img id="recentPhotos" src="images/recent photos/First to Fall (website).jpg" alt="Recently Added Photos" />
