added twitter button to follow me in index and contact pages

--- a/contact.html
+++ b/contact.html
@@ -18,17 +18,30 @@
       <header class="grid_12">
         <img src="./images/Header Logo.png" alt="Website Logo">
       </header>
-      <div id="pageHeader" class="grid_6">
-        <h1>Get in Touch</h1>
-      </div><!-- page-header -->
-      <div id="contact-intro" class="grid_6">
-        <p>You can use any of the methods on this page to contact me. I like to think that I am a friendly and approachable kinda chap, so just get in touch if you have questions about services I offer.</p>
-      </div><!-- contact-intro -->
-      <div class="grid_4">
+
+      <div id="columnTopLeft" class="grid_8">
+        <h1 id="pageHeader">Get in Touch</h1>
+        <div id="contact-intro" class="grid_6">
+          <p>You can use any of the methods on this page to contact me. I like to think that I am a friendly and approachable kinda chap, so just get in touch if you have questions about services I offer.</p>
+        </div><!-- contact-intro -->
+      </div><!-- columnTopLeft -->
+
+      <div id="columnTopRight" class="grid_4">
         <h2 class="sectionHeader">Audiophone</h2>
         <p>If you prefer the sound of a human voice then feel free to call me on:</p>
         <p><b>07527 983268</b></p>
-      </div><!-- contact-telephone -->
+      </div><!-- columnTopRight -->
+
+      <div id="columnBottomLeft" class="grid_6">
+        <h2 class="sectionHeader">Form</h2>
+      </div><!-- columnBottomLeft -->
+
+      <div id="columnBottomRight" class="grid_6">
+        <h2 class="sectionHeader">Follow Me!</h2>
+        <p>(just not in a creepy way please)</p>
+        <script src="https://platform.twitter.com/widgets.js"></script>
+        <a href="https://twitter.com/intent/follow?screen_name=Monk_a_Moo"><img id="twitterLogo" src="./images/TwitterLogo_white.png" /></a>
+      </div><!-- columnBottomRight -->
     </div><!-- page -->
     <!-- google analytics code -->
     <script>
