--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="site Intro">
           <p>Welcome web wanderer to nigelpainphotography.com I am Nigel Pain (clever naming huh?) I work in IT as a software tester, though I am looking to give up breaking things for a living and branch out into making things look pretty as a frontend web developer, hence I am building this site in my spare time. It's the digital home for all of my musings on love, life and photography. But also a place for me to share with the world the beautiful landscapes of the south west of england and the strange forms of life that call this land home.</p>
         </div><!-- siteIntro -->
-      </div><!-- columnLeft -->
+        <script src="https://platform.twitter.com/widgets.js"></script>
+        <a href="https://twitter.com/intent/follow?screen_name=Monk_a_Moo"><img id="twitterLogo" src="./images/TwitterLogo_white.png" /></a>
+        </div><!-- columnLeft -->
 
       <div id="columnRight" class="grid_6">
         <div id="siteSummary">
