organised gallery layout and implemented lightbox for viewing gallery photos

--- a/gallery/stilllife.html
+++ b/gallery/stilllife.html
@@ -3,6 +3,7 @@
   <head>
     <title>Nigel Pain Photography - Still Life Gallery</title>
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
+    <link href="../css/lightbox.css" rel="stylesheet">
   </head>
   <body>
     <nav>
@@ -18,11 +19,28 @@
       <header class="grid_12">
         <img src="../images/Header Logo.png" alt="Website Logo">
       </header>
-      <img src="../images/gallery/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
-      <p class="photocaption grid_12">With this photograph I wanted to try and capture that feeling when the first apples of the season have fallen, a sign of the tasty things to come!</p>
-      <img src="../images/gallery/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
-      <p class="photocaption grid_12">This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?</p>
+
+      <div class="grid_12">
+        <h1 id="pageHeader">Still Life Gallery</h1>
+      </div>
+
+      <div class="galleryThumb grid_3">
+          <a href="../images/gallery/still life/First to Fall (website).jpg" rel="lightbox" data-lightbox="still life" title="With this photograph I wanted to try and capture that feeling when the first apples of the season have fallen, a sign of all the tasty things to come!">
+            <img class="imageThumb" src="../images/gallery/still life/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+          </a>
+          <p>First to Fall</p>
+      </div><!-- galleryThumb -->
+
+      <div class="galleryThumb grid_3">
+          <a href="../images/gallery/still life/Forgotten Love (website).jpg" rel="lightbox" data-lightbox="still life" title="This was one of my first still life photography projects that I undertook! My aim with this photo was to convey a sombre mood and really provoke the viewer into thinking beyond the photo. What is in the letter? And what happened to it's recipient?">
+            <img class="imageThumb" src="../images/gallery/still life/Forgotten Love (website).jpg" alt="An image of a forgotten letter of love" title="Forgotten Love" />
+          </a>
+          <p>Forgotten Love</p>
+      </div><!-- galleryThumb -->
     </div><!-- page -->
+
+    <!-- lightbox js code -->
+    <script src="../js/lightbox-plus-jquery.js"></script>
     <!-- google analytics code -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -32,7 +50,6 @@
 
       ga('create', 'UA-62904127-1', 'auto');
       ga('send', 'pageview');
-
     </script>
   </body>
 </html>
