--- a/gallery/index.html
+++ b/gallery/index.html
@@ -19,17 +19,32 @@
         <img src="../images/Header Logo.png" alt="Website Logo">
       </header>
       <div id="galleries" class="container_12">
-        <div class="gallerylinks grid_4">
-          <a href="wildlife.html">Wildlife</a>
-        </div><!-- gallerylinks -->
-        <div class="gallerylinks grid_4">
-          <a href="stilllife.html">Still Life</a>
-        </div><!-- gallerylinks -->
-        <div class="gallerylinks grid_4">
-          <a href="landscapes.html">Landscapes</a>
-        </div><!-- gallerylinks -->
-      </div><!-- galleries -->
+        <div class="grid_12">
+          <h1 id="pageHeader">Welcome to the Gallery!</h1>
+        </div>
+
+        <div class="galleryThumb grid_3">
+            <a href="wildlife.html">
+              <img class="imageThumb" src="../images/gallery/wildlife/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
+            </a>
+            <p>Wildlife</p>
+        </div><!-- galleryThumb -->
+
+        <div class="galleryThumb grid_3">
+            <a href="stilllife.html">
+              <img class="imageThumb" src="../images/gallery/still life/First to Fall (website).jpg" alt="An image of a fallen apple amongst autumn leaves" title="First to Fall" />
+            </a>
+            <p>Still Life</p>
+        </div><!-- galleryThumb -->
+
+        <div class="galleryThumb grid_3">
+            <a href="landscapes.html">
+              <img class="imageThumb" src="" alt="" title=""/>
+            </a>
+            <p>Landscapes</p>
+        </div><!-- galleryThumb -->
     </div><!-- page -->
+
     <!-- google analytics code -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -39,7 +54,6 @@
 
       ga('create', 'UA-62904127-1', 'auto');
       ga('send', 'pageview');
-
     </script>
   </body>
 </html>
