--- a/gallery/landscapes.html
+++ b/gallery/landscapes.html
@@ -3,6 +3,7 @@
   <head>
     <title>Nigel Pain Photography - Landscapes Gallery</title>
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
+    <link href="../css/lightbox.css" rel="stylesheet">
   </head>
   <body>
     <body>
@@ -19,7 +20,14 @@
         <header class="grid_12">
           <img src="../images/Header Logo.png" alt="Website Logo">
         </header>
+
+        <div class="grid_12">
+          <h1 id="pageHeader">Landscape Gallery</h1>
+        </div>
       </div><!-- page -->
+
+      <!-- lightbox js code -->
+      <script src="../js/lightbox-plus-jquery.js"></script>
       <!-- google analytics code -->
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -29,7 +37,6 @@
 
         ga('create', 'UA-62904127-1', 'auto');
         ga('send', 'pageview');
-
       </script>
   </body>
 </html>
