--- a/gallery/wildlife.html
+++ b/gallery/wildlife.html
@@ -3,6 +3,7 @@
   <head>
     <title>Nigel Pain Photography - Wildlife Gallery</title>
     <link href="../css/styles.css", type="text/css", rel="stylesheet">
+    <link href="../css/lightbox.css" rel="stylesheet">
   </head>
   <body>
     <nav>
@@ -18,11 +19,28 @@
       <header class="grid_12">
         <img src="../images/Header Logo.png" alt="Website Logo">
       </header>
-      <img src="../images/gallery/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
-      <p class="photocaption grid_12">I owe the very existence of this image to our guide on the lovely Ria Lagartos in Mexico, how he managed to spot this little fella bathing on a washed up branch from the middle of the river I will never know =)</p>
-      <img src="../images/gallery/Lookout (website).jpg" alt="An image of a blackhawk perched on a dead tree branch" title="Lookout" />
-      <p class="photocaption grid_12">You didn't really have to work hard to capture amazing wildlife on the Ria Lagartos, this blackhawk was just perched atop a branch on the lookout for it's next meal as we sailed past.</p>
+
+      <div class="grid_12">
+        <h1 id="pageHeader">Wildlife Gallery</h1>
+      </div>
+
+      <div class="galleryThumb grid_3">
+          <a href="../images/gallery/wildlife/Little Nipper (website).jpg" rel="lightbox" data-lightbox="wildlife" title="I owe the very existence of this image to our guide on the lovely Ria Lagartos in Mexico, how he managed to spot this little fella bathing on a washed up branch from the middle of the river I will never know =)">
+            <img class="imageThumb" src="../images/gallery/wildlife/Little Nipper (website).jpg" alt="An image of a baby crocodile resting on a log" title="Little Nipper" />
+          </a>
+          <p>Little Nipper</p>
+      </div><!-- galleryThumb -->
+
+      <div class="galleryThumb grid_3">
+          <a href="../images/gallery/wildlife/Lookout (website).jpg" rel="lightbox" data-lightbox="wildlife" title="You didn't really have to work hard to capture amazing wildlife on the Ria Lagartos, this blackhawk was just perched atop a branch on the lookout for it's next meal as we sailed past.">
+            <img class="imageThumb" src="../images/gallery/wildlife/Lookout (website).jpg" alt="An image of a blackhawk perched on a dead tree branch" title="Lookout" />
+          </a>
+          <p>Lookout</p>
+      </div><!-- galleryThumb -->
     </div><!-- page -->
+
+    <!-- lightbox js code -->
+    <script src="../js/lightbox-plus-jquery.js"></script>
     <!-- google analytics code -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -32,7 +50,6 @@
 
       ga('create', 'UA-62904127-1', 'auto');
       ga('send', 'pageview');
-
     </script>
   </body>
 </html>
