added new landscape photo and applied new watermark to old photos

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -39,7 +39,7 @@
 
         <div class="galleryThumb grid_3">
             <a href="landscapes.html">
-              <img class="imageThumb" src="" alt="" title=""/>
+              <img class="imageThumb" src="../images/gallery/landscapes/Devils Cauldron (website).jpg" alt="An image of the devils cauldron section of lydford gorge" title="Devils Cauldron"/>
             </a>
             <p>Landscapes</p>
         </div><!-- galleryThumb -->
