--- a/gallery/landscapes.html
+++ b/gallery/landscapes.html
@@ -24,6 +24,13 @@
         <div class="grid_12">
           <h1 id="pageHeader">Landscape Gallery</h1>
         </div>
+
+        <div class="galleryThumb grid_3">
+            <a href="../images/gallery/landscapes/Devils Cauldron (website).jpg" rel="lightbox" data-lightbox="wildlife" title="The power of water is very much apparent at the 'Devils Cauldron' in Lydford Gorge, a whirling torrent of nature, anyone unlucky enough to slip on their way down really would be 'dead meat for the Devils Cauldron'">
+              <img class="imageThumb" src="../images/gallery/landscapes/Devils Cauldron (website).jpg" alt="An image of the devils cauldron section of lydford gorge" title="Devils Cauldron" />
+            </a>
+            <p>Devils Cauldron</p>
+        </div><!-- galleryThumb -->
       </div><!-- page -->
 
       <!-- lightbox js code -->
