added heavens ridge photo to gallery and recent photos

--- a/gallery/landscapes.html
+++ b/gallery/landscapes.html
@@ -26,10 +26,16 @@
         </div>
 
         <div class="galleryThumb grid_3">
-            <a href="../images/gallery/landscapes/Devils Cauldron (website).jpg" rel="lightbox" data-lightbox="wildlife" title="The power of water is very much apparent at the 'Devils Cauldron' in Lydford Gorge, a whirling torrent of nature, anyone unlucky enough to slip on their way down really would be 'dead meat for the Devils Cauldron'">
+            <a href="../images/gallery/landscapes/Devils Cauldron (website).jpg" rel="lightbox" data-lightbox="landscapes" title="The power of water is very much apparent at the 'Devils Cauldron' in Lydford Gorge, a whirling torrent of nature, anyone unlucky enough to slip on their way down really would be 'dead meat for the Devils Cauldron'">
               <img class="imageThumb" src="../images/gallery/landscapes/Devils Cauldron (website).jpg" alt="An image of the devils cauldron section of lydford gorge" title="Devils Cauldron" />
             </a>
             <p>Devils Cauldron</p>
+        </div><!-- galleryThumb -->
+        <div class="galleryThumb grid_3">
+            <a href="../images/gallery/landscapes/Heavens Ridge (website).jpg" rel="lightbox" data-lightbox="landscapes" title="This was my second attempt at a classic West Devon landscape shot, that of Brent Tor. As the sun began to set it lit up the edge of the tor drawing a line all the way up to the church.">
+              <img class="imageThumb" src="../images/gallery/landscapes/Heavens Ridge (website).jpg" alt="An image of a sunset over Brent Tor church" title="Heavens Ridge" />
+            </a>
+            <p>Heavens Ridge</p>
         </div><!-- galleryThumb -->
       </div><!-- page -->
 
