--- a/public_html/about.html
+++ b/public_html/about.html
@@ -19,7 +19,7 @@
         <img src="./images/Header Logo.png" alt="Website Logo">
       </header>
       <div id="aboutme" class="grid_12">
-        <p>My name is Nigel and I like photography</p>
+        <p>My name is Nigel and I like photography a lot!</p>
       </div><!-- aboutme -->
     </div><!-- page -->
     <!-- google analytics code -->
