added new landscape photo abridge into autumn

--- a/public_html/gallery/landscapes.html
+++ b/public_html/gallery/landscapes.html
@@ -37,6 +37,12 @@
             </a>
             <p>Heavens Ridge</p>
         </div><!-- galleryThumb -->
+        <div class="galleryThumb grid_3">
+            <a href="../images/gallery/landscapes/A Bridge into Autumn (website).jpg" rel="lightbox" data-lightbox="landscapes" title="It's surprising what beauty we become blind to, I drive over this bridge every day on my commute, it wasn't until I stopped on my way to a shoot one autumn morning and took in the scene that I appreciated it fully.">
+              <img class="imageThumb" src="../images/gallery/landscapes/A Bridge into Autumn (website).jpg" alt="An image of an autumnal river" title="A Bridge into Autumn" />
+            </a>
+            <p>A Bridge into Autumn</p>
+        </div><!-- galleryThumb -->
       </div><!-- page -->
 
       <!-- lightbox js code -->
