added message to contact email and confirmation message and also links to new php contact page

--- a/public_html/gallery/index.html
+++ b/public_html/gallery/index.html
@@ -11,7 +11,7 @@
         <li><a href="gallery/index.html" class="navbtncur">Gallery</a></li>
         <li><a href="#" class="navbtn">Blog</a></li>
         <li><a href="../about.html" class="navbtn">About</a></li>
-        <li><a href="../contact.html" class="navbtn">Contact</a></li>
+        <li><a href="../contact.php" class="navbtn">Contact</a></li>
       </ul>
     </nav>
     <div id="page" class="container_12 clearfix">
