--- a/public_html/index.html
+++ b/public_html/index.html
@@ -42,7 +42,7 @@
         <h2 class="sectionHeader">Latest Public Exposures</h2>
         <img id="recentPhotos" src="images/recent photos/First to Fall (website).jpg" alt="Recently Added Photos" />
         <script src="js/recent_photos.js"></script>
-        <a href="gallery/index.html">See more snappings at the gallery...</a>
+        <p><a href="gallery/index.html">See more snappings at the gallery...</a></p>
       </div><!-- columnRight -->
 
     </div><!-- page -->
