--- a/public_html/about.html
+++ b/public_html/about.html
@@ -14,14 +14,22 @@
         <li><a href="contact.php" class="navbtn">Contact</a></li>
       </ul>
     </nav>
+
     <div id="page" class="container_12 clearfix">
+
       <header class="grid_12">
         <img src="./images/Header Logo.png" alt="Website Logo">
       </header>
-      <div id="aboutme" class="grid_12">
-        <p>My name is Nigel and I like photography somewhat!</p>
-      </div><!-- aboutme -->
+
+      <div id="columnLeft" class="grid_7">
+        <h1 id="pageHeader">About Me</h1>
+        <p>I am Nigel Pain, yes that charming fellow in the photo over there. I live in devon with my partner and our two cats, pictured below, because you know cat pictures make everything better. I work in the IT industry as a software tester, although recently I have been expanding my skills into user experience and web design. It may not surprise you then to know that I am a bit of geek around all things computers, enjoying trading some banter with my mates over the latest computer games, or getting stuck into a good science fiction/fantasy film or book.</p>
+        <p>However unlike the stereotypical geek image I also enjoy venturing forth from my basement and exploring the world around me. I feel myself fortunate to be living in one of the most beautiful parts of England, with the likes of Dartmoor and the North Cornish coast right on my doorstep. I enjoy the excitement of exploring new areas with my partner in tow before retiring to a cosy pub for a pint or two of real ale!</p>
+        <p>This is really where my passion for photography has come from. I feel we live quite enclosed lives nowadays and Ive experienced myself just how much there is outside your doorstep to discover and how much they change throughout the year, moments passing by in the blink of an eye going unnoticed by the majority. What i love about photography is its ability to record these moments that I experience and using my creativity to bring out the feeling and atmosphere in the hopes that when I share them with other people it will inspire them to explore and appreciate more of this amazing world we live in.</p>
+      </div>
+
     </div><!-- page -->
+
     <!-- google analytics code -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
