--- a/public_html/gallery/index.html
+++ b/public_html/gallery/index.html
@@ -20,7 +20,7 @@
       </header>
       <div id="galleries" class="container_12">
         <div class="grid_12">
-          <h1 id="pageHeader">Welcome to the Gallery!</h1>
+          <h1 id="pageHeader">Welcome to the Gallery</h1>
         </div>
 
         <div class="galleryThumb grid_3">
